# llm_code_query

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  _old_clang_mcp._py  clang_mcp.py  compile_commands.json  cpp-mcp-v1.schema.json  docker-compose.yml  make_clang_compile_commands.py  mcp_server.py  mcp_wrapper.sh  mini_mcp.py  sample.cpp  tools.json
.devcontainer/: devcontainer.json
clang_mcp_rs/: Cargo.toml
clang_mcp_rs/.cargo/: config.toml
clang_mcp_rs/references/: SKILL.md  for_copilot_instructions.md
clang_mcp_rs/src/: clang_wrapper.rs  compile_db.rs  index.rs  main.rs  symbols.rs  test_support.rs  tools.rs  types.rs
clang_mcp_rs/tests/: integration_tests.rs
references/: SKILL.md  for_copilot_instructions.md
samples/: README.md  example_skill.md  run_samples.sh
samples/cli_examples/: README.md  cli.sh  mcp_raw_cpp_semantic_query.sh  mcp_raw_tool_call.sh  regenerate_golden.sh  request.semantic.called_by.grep_narrowed.json  request.semantic.list.load.json  validate.py
samples/cpp/: CMakeLists.txt  classes.cpp  data.cpp  functions.cpp  shapes.h  utils.h  yaml-cpp.pc.in
samples/requests/: describe_add.request.json  resolve_add.request.json  semantic_calls_list.request.json  semantic_exists_override.request.json  semantic_exists_virtual.request.json  semantic_functions_list.request.json  semantic_methods_list.request.json  semantic_structs_list.request.json
samples/responses/: classes.semantic_exists_override.response.json  classes.semantic_exists_virtual.response.json  (+6 more)
tests/: test_mcp_server.py
(+13 files in other folders)
