[package]
name = "clang-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clang_mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "1"
clang-sys = { version = "=1.7.0", features = ["clang_3_8", "clang_3_9", "clang_15_0"] }

[dev-dependencies]
assert_cmd = "=2.0.12"
predicates = "=3.0.3"
tempfile = "=3.8.1"
